add source code check by bandit, a security linter from PyCQA
disabled checks are
[B101:assert_used] Use of assert detected. The enclosed code will be removed when compiling to optimised byte code.
[B404:blacklist] Consider possible security implications associated with subprocess module.
[B603:subprocess_without_shell_equals_true] subprocess call - check for execution of untrusted input.
[B607:start_process_with_partial_path] Starting a process with a partial executable path

https://bandit.readthedocs.io/

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,4 +7,11 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
         - uses: actions/checkout@v2
-        - uses: docker://github/super-linter:v2.1.0
+
+        - name: Super-Linter
+          uses: github/super-linter:slim-v4
+
+        - name: Bandit
+          run: |
+            pip3 install bandit
+            bandit --skip B101,B310,B404,B603,B607 --recursive .
