--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,7 +9,7 @@ jobs:
         - uses: actions/checkout@v2
 
         - name: Super-Linter
-          uses: github/super-linter@slim-v4
+          uses: github/super-linter@v4
 
         - name: Bandit
           run: |
