--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,7 +9,9 @@ jobs:
         - uses: actions/checkout@v2
 
         - name: Super-Linter
-          uses: github/super-linter@v4
+          uses: docker://ghcr.io/github/super-linter:slim-v4
+          env:
+            VALIDATE_CPP: false
 
         - name: Bandit
           run: |
