--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,13 +7,4 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
         - uses: actions/checkout@v2
-
-        - name: Super-Linter
-          uses: docker://ghcr.io/github/super-linter:slim-v4
-          env:
-            VALIDATE_CPP: false
-
-        - name: Bandit
-          run: |
-            pip3 install bandit
-            bandit --skip B101,B310,B404,B603,B607 --recursive .
+        - uses: docker://github/super-linter:v2.1.0
