--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,13 +6,5 @@ jobs:
   linter:
     runs-on: ubuntu-20.04
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-
-    - name: Super-Linter
-      uses: docker://github/super-linter:v2.1.0
-
-    - name: Bandit
-      run: |
-        pip3 install bandit
-        bandit --skip B101,B310,B404,B603,B607 --recursive .
+        - uses: actions/checkout@v2
+        - uses: docker://github/super-linter:v2.1.0
