--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,6 +12,7 @@ jobs:
           uses: docker://ghcr.io/github/super-linter:slim-v4
           env:
             VALIDATE_CPP: false
+            VALIDATE_JSCPD: false
 
         - name: Bandit
           run: |
